// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mistakes should render corrrectly Wit one one count 1`] = `
<div
  className="game__mistakes"
>
  <div
    className="wrong"
  />
</div>
`;

exports[`Mistakes should render corrrectly With one zero count 1`] = `
<div
  className="game__mistakes"
/>
`;
